HW5_6 point 5 maybe ready

--- a/scripts/Homeworks/MC_Tarea5y6_PenduloDoble.ipynb
+++ b/scripts/Homeworks/MC_Tarea5y6_PenduloDoble.ipynb
@@ -77,7 +77,7 @@
         "\n",
         "4. Escriba las ecuaciones que permiten transformar de las variables generalizadas $\\{q_j\\}_M$ a las coordenadas $\\{\\vec r_i\\}_N$ y viceversa (transformación inversa).\n",
         "\n",
-        "5. Usando `SymPy` escriba una rutina que, dadas las ecuaciones de transformación  $\\{\\vec r_i(\\{q_j\\}_M)\\}_N$ calcule la función de energía cinética para el sistema. Intente que la rutina sea tan general posible que pueda ser aplicada a otros sitstemas.\n",
+        "5. Usando `SymPy` escriba una rutina que, dadas las ecuaciones de transformación  $\\{\\vec r_i(\\{q_j\\}_M)\\}_N$ calcule la función de energía cinética para el sistema. Intente que la rutina sea tan general posible que pueda ser aplicada a otros sistemas.\n",
         "\n",
         "6. Usando `SymPy` escriba una rutina que, dadas las ecuaciones de transformación  $\\{\\vec r_i(\\{q_j\\}_M)\\}_N$ y las componentes cartesianas de las fuerzas que actúan sobre las partículas, determine las fuerzas generalizadas. Intente que la rutina sea tan general posible que pueda ser aplicada a otros sitstemas.\n",
         "\n",
@@ -183,12 +183,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 59,
       "metadata": {},
       "outputs": [],
       "source": [
         "import numpy as np\n",
-        "import sympy as sp"
+        "import sympy as sp\n",
+        "from sympy import symbols, Function, diff, sin, cos, simplify, Rational\n"
       ]
     },
     {
@@ -217,7 +218,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 2. Escriba las ecuaciones que describen las restricciones del sistema."
+        "### 2. Escriba las ecuaciones que describen las restricciones del sistema."
       ]
     },
     {
@@ -229,7 +230,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 60,
       "metadata": {},
       "outputs": [
         {
@@ -331,72 +332,303 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 4,
+      "cell_type": "markdown",
       "metadata": {},
-      "outputs": [
-        {
-          "ename": "NameError",
-          "evalue": "name 'Eq' is not defined",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[1;32m/home/andromeda/celestial_mechanics/scripts/Homeworks/MC_Tarea5y6_PenduloDoble.ipynb Celda 18\u001b[0m line \u001b[0;36m1\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/andromeda/celestial_mechanics/scripts/Homeworks/MC_Tarea5y6_PenduloDoble.ipynb#X22sdnNjb2RlLXJlbW90ZQ%3D%3D?line=8'>9</a>\u001b[0m y2_expr \u001b[39m=\u001b[39m L1 \u001b[39m*\u001b[39m sp\u001b[39m.\u001b[39mcos(theta1) \u001b[39m+\u001b[39m L2 \u001b[39m*\u001b[39m sp\u001b[39m.\u001b[39mcos(theta2)\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/andromeda/celestial_mechanics/scripts/Homeworks/MC_Tarea5y6_PenduloDoble.ipynb#X22sdnNjb2RlLXJlbW90ZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39m# Constraints equations\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/andromeda/celestial_mechanics/scripts/Homeworks/MC_Tarea5y6_PenduloDoble.ipynb#X22sdnNjb2RlLXJlbW90ZQ%3D%3D?line=11'>12</a>\u001b[0m constraints \u001b[39m=\u001b[39m [\n\u001b[0;32m---> <a href='vscode-notebook-cell://wsl%2Bubuntu/home/andromeda/celestial_mechanics/scripts/Homeworks/MC_Tarea5y6_PenduloDoble.ipynb#X22sdnNjb2RlLXJlbW90ZQ%3D%3D?line=12'>13</a>\u001b[0m     Eq(x1, x1_expr),\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/andromeda/celestial_mechanics/scripts/Homeworks/MC_Tarea5y6_PenduloDoble.ipynb#X22sdnNjb2RlLXJlbW90ZQ%3D%3D?line=13'>14</a>\u001b[0m     Eq(y1, y1_expr),\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/andromeda/celestial_mechanics/scripts/Homeworks/MC_Tarea5y6_PenduloDoble.ipynb#X22sdnNjb2RlLXJlbW90ZQ%3D%3D?line=14'>15</a>\u001b[0m     Eq(x2, x2_expr),\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/andromeda/celestial_mechanics/scripts/Homeworks/MC_Tarea5y6_PenduloDoble.ipynb#X22sdnNjb2RlLXJlbW90ZQ%3D%3D?line=15'>16</a>\u001b[0m     Eq(y2, y2_expr)\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/andromeda/celestial_mechanics/scripts/Homeworks/MC_Tarea5y6_PenduloDoble.ipynb#X22sdnNjb2RlLXJlbW90ZQ%3D%3D?line=16'>17</a>\u001b[0m ]\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/andromeda/celestial_mechanics/scripts/Homeworks/MC_Tarea5y6_PenduloDoble.ipynb#X22sdnNjb2RlLXJlbW90ZQ%3D%3D?line=18'>19</a>\u001b[0m constraints\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'Eq' is not defined"
-          ]
-        }
-      ],
       "source": [
-        "\n",
-        "\n",
-        "# Define the symbols\n",
-        "L1, L2, theta1, theta2 = sp.symbols('L1 L2 theta1 theta2')\n",
-        "x1, y1, x2, y2 = sp.symbols('x1 y1 x2 y2')\n",
-        "\n",
-        "# Expressions for the Cartesian coordinates in terms of the angles\n",
-        "x1_expr = L1 * sp.sin(theta1)\n",
-        "y1_expr = L1 * sp.cos(theta1)\n",
-        "x2_expr = L1 * sp.sin(theta1) + L2 * sp.sin(theta2)\n",
-        "y2_expr = L1 * sp.cos(theta1) + L2 * sp.cos(theta2)\n",
-        "\n",
-        "# Constraints equations\n",
-        "constraints = [\n",
-        "    Eq(x1, x1_expr),\n",
-        "    Eq(y1, y1_expr),\n",
-        "    Eq(x2, x2_expr),\n",
-        "    Eq(y2, y2_expr)\n",
-        "]\n",
-        "\n",
-        "constraints"
+        "### 4. Escriba las ecuaciones que permiten transformar de las variables generalizadas $\\{q_j\\}_M$ a las coordenadas $\\{\\vec r_i\\}_N$ y viceversa (transformación inversa).\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 61,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Requirement already satisfied: pip in /home/andromeda/celestial_mechanics/.venv/lib/python3.10/site-packages (23.2.1)\n",
-            "Collecting pip\n",
-            "  Obtaining dependency information for pip from https://files.pythonhosted.org/packages/47/6a/453160888fab7c6a432a6e25f8afe6256d0d9f2cbd25971021da6491d899/pip-23.3.1-py3-none-any.whl.metadata\n",
-            "  Using cached pip-23.3.1-py3-none-any.whl.metadata (3.5 kB)\n",
-            "Using cached pip-23.3.1-py3-none-any.whl (2.1 MB)\n",
-            "Installing collected packages: pip\n",
-            "  Attempting uninstall: pip\n",
-            "    Found existing installation: pip 23.2.1\n",
-            "    Uninstalling pip-23.2.1:\n",
-            "      Successfully uninstalled pip-23.2.1\n",
-            "Successfully installed pip-23.3.1\n",
-            "Note: you may need to restart the kernel to use updated packages.\n"
+            "De coordenadas generalizadas a cartesianas\n"
           ]
+        },
+        {
+          "data": {
+            "text/latex": [
+              "$\\displaystyle x_{1} = L_{1} \\sin{\\left(\\theta_{1} \\right)}$"
+            ],
+            "text/plain": [
+              "Eq(x1, L1*sin(theta1))"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "text/latex": [
+              "$\\displaystyle y_{1} = L_{1} \\cos{\\left(\\theta_{1} \\right)}$"
+            ],
+            "text/plain": [
+              "Eq(y1, L1*cos(theta1))"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "text/latex": [
+              "$\\displaystyle x_{2} = L_{1} \\sin{\\left(\\theta_{1} \\right)} + L_{2} \\sin{\\left(\\theta_{2} \\right)}$"
+            ],
+            "text/plain": [
+              "Eq(x2, L1*sin(theta1) + L2*sin(theta2))"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "text/latex": [
+              "$\\displaystyle y_{2} = L_{1} \\cos{\\left(\\theta_{1} \\right)} + L_{2} \\cos{\\left(\\theta_{2} \\right)}$"
+            ],
+            "text/plain": [
+              "Eq(y2, L1*cos(theta1) + L2*cos(theta2))"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "De cartesianas a generalizadas\n"
+          ]
+        },
+        {
+          "data": {
+            "text/latex": [
+              "$\\displaystyle \\theta_{1} = \\operatorname{asin}{\\left(\\frac{x_{1}}{L_{1}} \\right)}$"
+            ],
+            "text/plain": [
+              "Eq(theta1, asin(x1/L1))"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "text/latex": [
+              "$\\displaystyle \\theta_{1} = \\operatorname{acos}{\\left(\\frac{y_{1}}{L_{1}} \\right)}$"
+            ],
+            "text/plain": [
+              "Eq(theta1, acos(y1/L1))"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "text/latex": [
+              "$\\displaystyle \\theta_{2} = - \\operatorname{asin}{\\left(\\frac{x_{1} - x_{2}}{L_{2}} \\right)}$"
+            ],
+            "text/plain": [
+              "Eq(theta2, -asin((x1 - x2)/L2))"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
         }
       ],
       "source": [
-        "%pip install --upgrade pip"
+        "# Definiendo el eje positivo y hacía abajo, y el x hacía la derecha \n",
+        "\n",
+        "# Primero de coordenadas generalizadas a cartesianas\n",
+        "x1_equation = sp.Eq(x1, L1 * sp.sin(theta1))\n",
+        "y1_equation = sp.Eq(y1, L1 * sp.cos(theta1))\n",
+        "x2_equation = sp.Eq(x2, L1 * sp.sin(theta1) + L2 * sp.sin(theta2) )\n",
+        "y2_equation = sp.Eq(y2, L1 * sp.cos(theta1) + L2 * sp.cos(theta2))\n",
+        "\n",
+        "## Ahora de cartesianas a generalizadas\n",
+        "\n",
+        "# Primero resolvamos las ecuaciones \n",
+        "theta1_solutions = sp.solve(( x1_equation), theta1) # Dos soluciones para theta1\n",
+        "theta1_solutions_2 = sp.solve(( y1_equation), theta1)\n",
+        "\n",
+        "theta2_solutions = sp.solve((  x2_equation, y2_equation), theta2) # Dos soluciones para theta2\n",
+        "\n",
+        "# Poniendo las soluciones en ecuaciones\n",
+        "theta1_equation = sp.Eq(theta1, theta1_solutions[1])\n",
+        "theta1_equation_2 = sp.Eq(theta1, theta1_solutions_2[1]) \n",
+        "\n",
+        "# Reemplando L1*sin(theta1) por x1\n",
+        "theta2_solution = theta2_solutions[1][0].subs(L1 * sp.sin(theta1), x1)\n",
+        "theta2_equation = sp.Eq(theta2, theta2_solution) # Construyendo la ecuación\n",
+        "\n",
+        "## Imprimiendo nuestros resultados\n",
+        "print('De coordenadas generalizadas a cartesianas')\n",
+        "display(x1_equation, y1_equation, x2_equation, y2_equation)\n",
+        "\n",
+        "print('De cartesianas a generalizadas')\n",
+        "display(theta1_equation, theta1_equation_2, theta2_equation)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "5. Usando `SymPy` escriba una rutina que, dadas las ecuaciones de transformación  $\\{\\vec r_i(\\{q_j\\}_M)\\}_N$ calcule la función de energía cinética para el sistema. Intente que la rutina sea tan general posible que pueda ser aplicada a otros sitstemas."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 62,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/latex": [
+              "$\\displaystyle L_{1} \\cos{\\left(\\theta_{1}{\\left(t \\right)} \\right)} \\frac{d}{d t} \\theta_{1}{\\left(t \\right)}$"
+            ],
+            "text/plain": [
+              "L1*cos(theta1(t))*Derivative(theta1(t), t)"
+            ]
+          },
+          "execution_count": 62,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "# Vamos a usar 'Function' para definir theta1 como una función del tiempo.\n",
+        "from sympy import symbols, Function, cos\n",
+        "\n",
+        "# Definir theta1 como función del tiempo t\n",
+        "t = symbols('t')\n",
+        "theta1 = Function('theta1')(t)\n",
+        "L1 = symbols('L1')\n",
+        "\n",
+        "# Definir x1 en términos de theta1(t)\n",
+        "x1 = L1 * sp.sin(theta1)\n",
+        "\n",
+        "# Calcular dx1/dt usando 'diff' que automáticamente tomará en cuenta la cadena de derivadas\n",
+        "dx1_dt = sp.diff(x1, t)\n",
+        "dx1_dt\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 65,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/latex": [
+              "$\\displaystyle \\frac{L_{1}^{2} m_{1} \\left(\\frac{d}{d t} \\operatorname{theta1(t)}{\\left(t \\right)}\\right)^{2}}{2} + \\frac{m_{2} \\left(L_{1}^{2} \\left(\\frac{d}{d t} \\operatorname{theta1(t)}{\\left(t \\right)}\\right)^{2} + 2 L_{1} L_{2} \\cos{\\left(\\operatorname{theta1(t)}{\\left(t \\right)} - \\theta_{2}{\\left(t \\right)} \\right)} \\frac{d}{d t} \\operatorname{theta1(t)}{\\left(t \\right)} \\frac{d}{d t} \\theta_{2}{\\left(t \\right)} + L_{2}^{2} \\left(\\frac{d}{d t} \\theta_{2}{\\left(t \\right)}\\right)^{2}\\right)}{2}$"
+            ],
+            "text/plain": [
+              "L1**2*m1*Derivative(theta1(t)(t), t)**2/2 + m2*(L1**2*Derivative(theta1(t)(t), t)**2 + 2*L1*L2*cos(theta1(t)(t) - theta2(t))*Derivative(theta1(t)(t), t)*Derivative(theta2(t), t) + L2**2*Derivative(theta2(t), t)**2)/2"
+            ]
+          },
+          "execution_count": 65,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "def kinetic_energy_3d(transform_equations_per_particle):\n",
+        "    \"\"\"\n",
+        "    Esta función recibe una lista de diccionarios, donde cada diccionario\n",
+        "    debe contener las ecuaciones de transformación de sympy y\n",
+        "    las variables generalizadas por cada ecuación, si no aparece la función\n",
+        "    se asume esta como 0, por ejemplo en el caso de z=0.\n",
+        "\n",
+        "    Retorna la función de energía cinética del sistema considerando movimiento en x, y, z.\n",
+        "    \"\"\"\n",
+        "    T_total = 0  # Energía cinética total del sistema inicialmente es cero\n",
+        "    t = symbols('t')  # Símbolo para el tiempo\n",
+        "\n",
+        "    # Procesamos cada partícula y calculamos su energía cinética\n",
+        "    for particle in transform_equations_per_particle:\n",
+        "        m = particle['mass']  # Masa de la partícula\n",
+        "        q = particle['q']  # Variables generalizadas como funciones del tiempo\n",
+        "\n",
+        "        # Convertimos las variables generalizadas a funciones del tiempo y calculamos sus derivadas\n",
+        "        q_funcs = {qi: Function(str(qi))(t) for qi in q}\n",
+        "        dq_funcs = {qi: diff(q_func, t) for qi, q_func in q_funcs.items()}\n",
+        "\n",
+        "        # Sustituimos las variables generalizadas en las ecuaciones de transformación por las funciones\n",
+        "        x = particle['x'].subs(q_funcs) if 'x' in particle else 0\n",
+        "        y = particle['y'].subs(q_funcs) if 'y' in particle else 0\n",
+        "        z = particle['z'].subs(q_funcs) if 'z' in particle else 0\n",
+        "\n",
+        "        # Calculamos las derivadas de x, y, y z con respecto al tiempo usando la regla de la cadena\n",
+        "        vx = x.diff(t).subs(dq_funcs) if 'x' in particle else 0\n",
+        "        vy = y.diff(t).subs(dq_funcs) if 'y' in particle else 0\n",
+        "        vz = z.diff(t).subs(dq_funcs) if 'z' in particle else 0\n",
+        "\n",
+        "        # Calculamos la energía cinética de la partícula y la sumamos al total\n",
+        "        T = Rational(1, 2) * m * (vx**2 + vy**2 + vz**2)\n",
+        "        T_total += T\n",
+        "\n",
+        "    # Simplificamos la energía cinética total y la retornamos\n",
+        "    return simplify(T_total)\n",
+        "\n",
+        "# Ejemplo de uso de la función con movimiento en z\n",
+        "# Definir las variables generalizadas\n",
+        "q1, q2 = symbols('q1 q2')\n",
+        "m1, m2, L1, L2 = symbols('m1 m2 L1 L2')\n",
+        "\n",
+        "# Lista de ecuaciones de transformación para cada partícula considerando también z\n",
+        "z2 = Function('z2')(t)  # Definimos z2 como una función del tiempo t\n",
+        "transform_equations_per_particle = [\n",
+        "    {\n",
+        "        'mass': m1,\n",
+        "        'x': L1 * sin(theta1),\n",
+        "        'y': -L1 * cos(theta1),\n",
+        "        'q': [theta1],\n",
+        "    },\n",
+        "    {\n",
+        "        'mass': m2,\n",
+        "        'x': L1 * sin(theta1) + L2 * sin(theta2),\n",
+        "        'y': -L1 * cos(theta1) - L2 * cos(theta2),\n",
+        "       'q': [theta1, theta2],\n",
+        "    }\n",
+        "]\n",
+        "\n",
+        "# Calcular la energía cinética del sistema incluyendo z\n",
+        "T_total_example_3d = kinetic_energy_3d(transform_equations_per_particle)\n",
+        "T_total_example_3d\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 64,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/latex": [
+              "$\\displaystyle 2.25 \\cos{\\left(q_{1}{\\left(t \\right)} - q_{2}{\\left(t \\right)} \\right)} \\frac{d}{d t} q_{1}{\\left(t \\right)} \\frac{d}{d t} q_{2}{\\left(t \\right)} + 1.75 \\left(\\frac{d}{d t} q_{1}{\\left(t \\right)}\\right)^{2} + 1.6875 \\left(\\frac{d}{d t} q_{2}{\\left(t \\right)}\\right)^{2} + 0.75 \\left(\\frac{d}{d t} z_{2}{\\left(t \\right)}\\right)^{2}$"
+            ],
+            "text/plain": [
+              "2.25*cos(q1(t) - q2(t))*Derivative(q1(t), t)*Derivative(q2(t), t) + 1.75*Derivative(q1(t), t)**2 + 1.6875*Derivative(q2(t), t)**2 + 0.75*Derivative(z2(t), t)**2"
+            ]
+          },
+          "execution_count": 64,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "# Valores específicos para las longitudes de las varillas, masas y velocidades angulares\n",
+        "values = {L1: 1, L2: 1.5, m1: 2, m2: 1.5, 'q1(t)': np.pi/4, 'dq1(t)': 0.5, 'q2(t)': np.pi/3, 'dq2(t)': 0.75, 'z2(t)': 0.3, 'dz2(t)': 0.1}\n",
+        "\n",
+        "# Sustituir los valores en la expresión de la energía cinética\n",
+        "T_evaluated = T_total_example_3d.subs(values)\n",
+        "T_evaluated"
       ]
     }
   ],
