--- a/scripts/Homeworks/MC_Tarea5y6_PenduloDoble.ipynb
+++ b/scripts/Homeworks/MC_Tarea5y6_PenduloDoble.ipynb
@@ -183,13 +183,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": 46,
       "metadata": {},
       "outputs": [],
       "source": [
         "import numpy as np\n",
         "import sympy as sp\n",
-        "from sympy import symbols, Function, diff, sin, cos, simplify, Rational\n"
+        "from sympy import symbols, Function, diff, sin, cos, simplify, Rational, Eq\n"
       ]
     },
     {
@@ -230,7 +230,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": 47,
       "metadata": {},
       "outputs": [
         {
@@ -340,7 +340,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": 48,
       "metadata": {},
       "outputs": [
         {
@@ -484,61 +484,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": 49,
       "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/latex": [
-              "$\\displaystyle L_{1} \\cos{\\left(\\theta_{1}{\\left(t \\right)} \\right)} \\frac{d}{d t} \\theta_{1}{\\left(t \\right)}$"
-            ],
-            "text/plain": [
-              "L1*cos(theta1(t))*Derivative(theta1(t), t)"
-            ]
-          },
-          "execution_count": 62,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
-        "# Vamos a usar 'Function' para definir theta1 como una función del tiempo.\n",
-        "from sympy import symbols, Function, cos\n",
-        "\n",
-        "# Definir theta1 como función del tiempo t\n",
-        "t = symbols('t')\n",
-        "theta1 = Function('theta1')(t)\n",
-        "L1 = symbols('L1')\n",
-        "\n",
-        "# Definir x1 en términos de theta1(t)\n",
-        "x1 = L1 * sp.sin(theta1)\n",
-        "\n",
-        "# Calcular dx1/dt usando 'diff' que automáticamente tomará en cuenta la cadena de derivadas\n",
-        "dx1_dt = sp.diff(x1, t)\n",
-        "dx1_dt\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 65,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/latex": [
-              "$\\displaystyle \\frac{L_{1}^{2} m_{1} \\left(\\frac{d}{d t} \\operatorname{theta1(t)}{\\left(t \\right)}\\right)^{2}}{2} + \\frac{m_{2} \\left(L_{1}^{2} \\left(\\frac{d}{d t} \\operatorname{theta1(t)}{\\left(t \\right)}\\right)^{2} + 2 L_{1} L_{2} \\cos{\\left(\\operatorname{theta1(t)}{\\left(t \\right)} - \\theta_{2}{\\left(t \\right)} \\right)} \\frac{d}{d t} \\operatorname{theta1(t)}{\\left(t \\right)} \\frac{d}{d t} \\theta_{2}{\\left(t \\right)} + L_{2}^{2} \\left(\\frac{d}{d t} \\theta_{2}{\\left(t \\right)}\\right)^{2}\\right)}{2}$"
-            ],
-            "text/plain": [
-              "L1**2*m1*Derivative(theta1(t)(t), t)**2/2 + m2*(L1**2*Derivative(theta1(t)(t), t)**2 + 2*L1*L2*cos(theta1(t)(t) - theta2(t))*Derivative(theta1(t)(t), t)*Derivative(theta2(t), t) + L2**2*Derivative(theta2(t), t)**2)/2"
-            ]
-          },
-          "execution_count": 65,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "def kinetic_energy_3d(transform_equations_per_particle):\n",
+        "def kinetic_energy(transform_equations_per_particle):\n",
         "    \"\"\"\n",
         "    Esta función recibe una lista de diccionarios, donde cada diccionario\n",
         "    debe contener las ecuaciones de transformación de sympy y\n",
@@ -547,7 +497,7 @@
         "\n",
         "    Retorna la función de energía cinética del sistema considerando movimiento en x, y, z.\n",
         "    \"\"\"\n",
-        "    T_total = 0  # Energía cinética total del sistema inicialmente es cero\n",
+        "    energy_total = 0  # Energía cinética total del sistema inicialmente es cero\n",
         "    t = symbols('t')  # Símbolo para el tiempo\n",
         "\n",
         "    # Procesamos cada partícula y calculamos su energía cinética\n",
@@ -557,7 +507,7 @@
         "\n",
         "        # Convertimos las variables generalizadas a funciones del tiempo y calculamos sus derivadas\n",
         "        q_funcs = {qi: Function(str(qi))(t) for qi in q}\n",
-        "        dq_funcs = {qi: diff(q_func, t) for qi, q_func in q_funcs.items()}\n",
+        "        #dq_funcs = {qi: diff(q_func, t) for qi, q_func in q_funcs.items()}\n",
         "\n",
         "        # Sustituimos las variables generalizadas en las ecuaciones de transformación por las funciones\n",
         "        x = particle['x'].subs(q_funcs) if 'x' in particle else 0\n",
@@ -565,70 +515,93 @@
         "        z = particle['z'].subs(q_funcs) if 'z' in particle else 0\n",
         "\n",
         "        # Calculamos las derivadas de x, y, y z con respecto al tiempo usando la regla de la cadena\n",
-        "        vx = x.diff(t).subs(dq_funcs) if 'x' in particle else 0\n",
-        "        vy = y.diff(t).subs(dq_funcs) if 'y' in particle else 0\n",
-        "        vz = z.diff(t).subs(dq_funcs) if 'z' in particle else 0\n",
+        "        vx = x.diff(t) if 'x' in particle else 0\n",
+        "        vy = y.diff(t) if 'y' in particle else 0\n",
+        "        vz = z.diff(t) if 'z' in particle else 0\n",
         "\n",
         "        # Calculamos la energía cinética de la partícula y la sumamos al total\n",
-        "        T = Rational(1, 2) * m * (vx**2 + vy**2 + vz**2)\n",
-        "        T_total += T\n",
+        "        E = Rational(1, 2) * m * (vx**2 + vy**2 + vz**2)\n",
+        "        energy_total += E\n",
         "\n",
         "    # Simplificamos la energía cinética total y la retornamos\n",
-        "    return simplify(T_total)\n",
-        "\n",
-        "# Ejemplo de uso de la función con movimiento en z\n",
-        "# Definir las variables generalizadas\n",
-        "q1, q2 = symbols('q1 q2')\n",
-        "m1, m2, L1, L2 = symbols('m1 m2 L1 L2')\n",
-        "\n",
-        "# Lista de ecuaciones de transformación para cada partícula considerando también z\n",
-        "z2 = Function('z2')(t)  # Definimos z2 como una función del tiempo t\n",
-        "transform_equations_per_particle = [\n",
-        "    {\n",
-        "        'mass': m1,\n",
-        "        'x': L1 * sin(theta1),\n",
-        "        'y': -L1 * cos(theta1),\n",
-        "        'q': [theta1],\n",
-        "    },\n",
-        "    {\n",
-        "        'mass': m2,\n",
-        "        'x': L1 * sin(theta1) + L2 * sin(theta2),\n",
-        "        'y': -L1 * cos(theta1) - L2 * cos(theta2),\n",
-        "       'q': [theta1, theta2],\n",
-        "    }\n",
-        "]\n",
-        "\n",
-        "# Calcular la energía cinética del sistema incluyendo z\n",
-        "T_total_example_3d = kinetic_energy_3d(transform_equations_per_particle)\n",
-        "T_total_example_3d\n"
+        "    return simplify(energy_total)\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "usemos esta función  para hallar la ecuación de la engergía cinética de nuestro problema del pendulo doble"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": 50,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/latex": [
-              "$\\displaystyle 2.25 \\cos{\\left(q_{1}{\\left(t \\right)} - q_{2}{\\left(t \\right)} \\right)} \\frac{d}{d t} q_{1}{\\left(t \\right)} \\frac{d}{d t} q_{2}{\\left(t \\right)} + 1.75 \\left(\\frac{d}{d t} q_{1}{\\left(t \\right)}\\right)^{2} + 1.6875 \\left(\\frac{d}{d t} q_{2}{\\left(t \\right)}\\right)^{2} + 0.75 \\left(\\frac{d}{d t} z_{2}{\\left(t \\right)}\\right)^{2}$"
+              "$\\displaystyle Ec = \\frac{L_{1}^{2} m_{1} \\left(\\frac{d}{d t} \\theta_{1}{\\left(t \\right)}\\right)^{2}}{2} + \\frac{m_{2} \\left(L_{1}^{2} \\left(\\frac{d}{d t} \\theta_{1}{\\left(t \\right)}\\right)^{2} + 2 L_{1} L_{2} \\cos{\\left(\\theta_{1}{\\left(t \\right)} - \\theta_{2}{\\left(t \\right)} \\right)} \\frac{d}{d t} \\theta_{1}{\\left(t \\right)} \\frac{d}{d t} \\theta_{2}{\\left(t \\right)} + L_{2}^{2} \\left(\\frac{d}{d t} \\theta_{2}{\\left(t \\right)}\\right)^{2}\\right)}{2}$"
             ],
             "text/plain": [
-              "2.25*cos(q1(t) - q2(t))*Derivative(q1(t), t)*Derivative(q2(t), t) + 1.75*Derivative(q1(t), t)**2 + 1.6875*Derivative(q2(t), t)**2 + 0.75*Derivative(z2(t), t)**2"
+              "Eq(Ec, L1**2*m1*Derivative(theta1(t), t)**2/2 + m2*(L1**2*Derivative(theta1(t), t)**2 + 2*L1*L2*cos(theta1(t) - theta2(t))*Derivative(theta1(t), t)*Derivative(theta2(t), t) + L2**2*Derivative(theta2(t), t)**2)/2)"
             ]
           },
-          "execution_count": 64,
+          "execution_count": 50,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "# Valores específicos para las longitudes de las varillas, masas y velocidades angulares\n",
-        "values = {L1: 1, L2: 1.5, m1: 2, m2: 1.5, 'q1(t)': np.pi/4, 'dq1(t)': 0.5, 'q2(t)': np.pi/3, 'dq2(t)': 0.75, 'z2(t)': 0.3, 'dz2(t)': 0.1}\n",
+        "# Definir las variables generalizadas\n",
+        "theta1, theta2 = symbols('theta1 theta2')\n",
+        "m1, m2, L1, L2 = symbols('m1 m2 L1 L2')\n",
         "\n",
-        "# Sustituir los valores en la expresión de la energía cinética\n",
-        "T_evaluated = T_total_example_3d.subs(values)\n",
-        "T_evaluated"
+        "# Lista de ecuaciones de transformación para cada partícula \n",
+        "transform_equations_per_particle = [\n",
+        "    {\n",
+        "        'mass': m1,\n",
+        "        'x': L1 * sin(theta1),\n",
+        "        'y': L1 * cos(theta1),\n",
+        "        'q': [theta1],\n",
+        "    },\n",
+        "    {\n",
+        "        'mass': m2,\n",
+        "        'x': L1 * sin(theta1) + L2 * sin(theta2),\n",
+        "        'y': L1 * cos(theta1) + L2 * cos(theta2),\n",
+        "       'q': [theta1, theta2],\n",
+        "    }\n",
+        "]\n",
+        "\n",
+        "# Calcular la función de energía cinética del sistema  \n",
+        "Ttotal = kinetic_energy(transform_equations_per_particle)\n",
+        "\n",
+        "# Imprimiendo la energía cinética\n",
+        "Ec = symbols('Ec')\n",
+        "Ttotal_equation = Eq(Ec, Ttotal)\n",
+        "Ttotal_equation"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 6. Usando `SymPy` escriba una rutina que, dadas las ecuaciones de transformación  $\\{\\vec r_i(\\{q_j\\}_M)\\}_N$ y las componentes cartesianas de las fuerzas que actúan sobre las partículas, determine las fuerzas generalizadas. Intente que la rutina sea tan general posible que pueda ser aplicada a otros sitstemas."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "-----------------"
       ]
     }
   ],
