HW5_6 point 6 ready

--- a/scripts/Homeworks/MC_Tarea5y6_PenduloDoble.ipynb
+++ b/scripts/Homeworks/MC_Tarea5y6_PenduloDoble.ipynb
@@ -183,13 +183,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 31,
       "metadata": {},
       "outputs": [],
       "source": [
         "import numpy as np\n",
         "import sympy as sp\n",
-        "from sympy import symbols, Function, diff, sin, cos, simplify, Rational, Eq\n"
+        "from sympy import symbols, Function, diff, sin, cos, simplify, Rational, Eq, Matrix\n"
       ]
     },
     {
@@ -206,7 +206,7 @@
       "metadata": {},
       "source": [
         "\n",
-        "1. Para este sistema identifique:\n",
+        "### 1. Para este sistema identifique:\n",
         "\n",
         "  - Número de partículas: ______2_______\n",
         "  - Número de coordenadas: ______6_______\n",
@@ -230,7 +230,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 32,
       "metadata": {},
       "outputs": [
         {
@@ -340,7 +340,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 33,
       "metadata": {},
       "outputs": [
         {
@@ -484,7 +484,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 34,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -536,7 +536,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": 35,
       "metadata": {},
       "outputs": [
         {
@@ -548,7 +548,7 @@
               "Eq(Ec, L1**2*m1*Derivative(theta1(t), t)**2/2 + m2*(L1**2*Derivative(theta1(t), t)**2 + 2*L1*L2*cos(theta1(t) - theta2(t))*Derivative(theta1(t), t)*Derivative(theta2(t), t) + L2**2*Derivative(theta2(t), t)**2)/2)"
             ]
           },
-          "execution_count": 50,
+          "execution_count": 35,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -575,11 +575,11 @@
         "]\n",
         "\n",
         "# Calcular la función de energía cinética del sistema  \n",
-        "Ttotal = kinetic_energy(transform_equations_per_particle)\n",
+        "T_total = kinetic_energy(transform_equations_per_particle)\n",
         "\n",
         "# Imprimiendo la energía cinética\n",
         "Ec = symbols('Ec')\n",
-        "Ttotal_equation = Eq(Ec, Ttotal)\n",
+        "Ttotal_equation = Eq(Ec, T_total)\n",
         "Ttotal_equation"
       ]
     },
@@ -592,10 +592,128 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 36,
       "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "\n",
+        "\n",
+        "# Hagamos una función que encuentre las fuerzas generalizadas de muchos sistemas\n",
+        "def generalized_forces(transform_equations, forces):\n",
+        "    # t será nuestro símbolo para el tiempo\n",
+        "    t = sp.symbols('t')\n",
+        "    Q = [] # en esta lista vamos a ir agegando nuestros Qj\n",
+        "\n",
+        "    for j, qj in enumerate(transform_equations['q']):\n",
+        "        Qj = 0\n",
+        "        for i, particle in enumerate(transform_equations['particles']):\n",
+        "            # Extraemos el vector de posición de la partícula i\n",
+        "            r_i = sp.Matrix(particle['r'])\n",
+        "            # Calculamos la derivada parcial del vector r_i respecto a la variable generalizada qj\n",
+        "            dr_i_dqj = r_i.diff(qj)\n",
+        "            # Agregamos el producto punto de la fuerza en la partícula i y dr_i_dqj a Qj\n",
+        "            Qj += forces[i].dot(dr_i_dqj)\n",
+        "        # Agregamos la fuerza generalizada para la variable qj a la lista de fuerzas generalizadas\n",
+        "        Q.append(simplify(Qj))\n",
+        "\n",
+        "    return Q"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Ahora usemos esta función para hallar las Fuerzas generalizadas de nuestro sistema de pendulo doble"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 37,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/latex": [
+              "$\\displaystyle Q_{1} = L_{1} g \\left(- m_{1} - m_{2}\\right) \\sin{\\left(\\theta_{1} \\right)}$"
+            ],
+            "text/plain": [
+              "Eq(Q1, L1*g*(-m1 - m2)*sin(theta1))"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "text/latex": [
+              "$\\displaystyle Q_{2} = - L_{2} g m_{2} \\sin{\\left(\\theta_{2} \\right)}$"
+            ],
+            "text/plain": [
+              "Eq(Q2, -L2*g*m2*sin(theta2))"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        }
+      ],
+      "source": [
+        "# Definir las variables generalizadas y las fuerzas\n",
+        "theta1, theta2 = symbols('theta1 theta2')\n",
+        "m1, m2, L1, L2, g = symbols('m1 m2 L1 L2 g')\n",
+        "\n",
+        "# Ecuaciones de transformación para las posiciones de las partículas en términos de las variables generalizadas\n",
+        "r1 = [L1 * sin(theta1), L1 * cos(theta1), 0]  # Posición de la primera masa\n",
+        "r2 = [L1 * sin(theta1) + L2 * sin(theta2),  L1 * cos(theta1) + L2 * cos(theta2), 0]  # Posición de la segunda masa\n",
+        "\n",
+        "# Fuerzas actuando sobre las partículas (en este caso, solo la gravedad)\n",
+        "F1 = [0, m1 * g, 0]\n",
+        "F2 = [0, m2 * g, 0]\n",
+        "\n",
+        "# Construir las ecuaciones de transformación y las fuerzas en la estructura correcta\n",
+        "transform_equations = {\n",
+        "    'q': [theta1, theta2],\n",
+        "    'particles': [\n",
+        "        {'r': r1},\n",
+        "        {'r': r2}\n",
+        "    ]\n",
+        "}\n",
+        "\n",
+        "forces = [Matrix(F1), Matrix(F2)]\n",
+        "\n",
+        "# Calcular las fuerzas generalizadas para el péndulo doble\n",
+        "generalized_forces = generalized_forces(transform_equations, forces)\n",
+        "\n",
+        "# Imprimamos nuestros resultados\n",
+        "for i,j in enumerate(generalized_forces): \n",
+        "    Qj = symbols(f'Q{i + 1}')\n",
+        "    display(Eq(Qj,j))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 39,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/latex": [
+              "$\\displaystyle \\left[\\begin{matrix}0\\\\g m_{1}\\\\0\\end{matrix}\\right]$"
+            ],
+            "text/plain": [
+              "Matrix([\n",
+              "[   0],\n",
+              "[g*m1],\n",
+              "[   0]])"
+            ]
+          },
+          "execution_count": 39,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "sp.Matrix(F1)"
+      ]
     },
     {
       "cell_type": "markdown",
