--- a/scripts/Homeworks/MC_Tarea5y6_PenduloDoble.ipynb
+++ b/scripts/Homeworks/MC_Tarea5y6_PenduloDoble.ipynb
@@ -983,44 +983,40 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "sin dependencias la una de la otra"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 54,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/latex": [
-              "$\\displaystyle - \\frac{L_{2} m_{2} \\sin{\\left(\\theta_{1}{\\left(t \\right)} - \\theta_{2}{\\left(t \\right)} \\right)} \\left(\\frac{d}{d t} \\theta_{2}{\\left(t \\right)}\\right)^{2} + L_{2} m_{2} \\cos{\\left(\\theta_{1}{\\left(t \\right)} - \\theta_{2}{\\left(t \\right)} \\right)} \\frac{d^{2}}{d t^{2}} \\theta_{2}{\\left(t \\right)} + g m_{1} \\sin{\\left(\\theta_{1}{\\left(t \\right)} \\right)} + g m_{2} \\sin{\\left(\\theta_{1}{\\left(t \\right)} \\right)}}{L_{1} \\left(m_{1} + m_{2}\\right)}$"
+              "$\\displaystyle \\frac{d^{2}}{d t^{2}} \\theta_{1}{\\left(t \\right)} = \\frac{- \\frac{L_{1} m_{2} \\sin{\\left(2 \\theta_{1}{\\left(t \\right)} - 2 \\theta_{2}{\\left(t \\right)} \\right)} \\left(\\frac{d}{d t} \\theta_{1}{\\left(t \\right)}\\right)^{2}}{2} - L_{2} m_{2} \\sin{\\left(\\theta_{1}{\\left(t \\right)} - \\theta_{2}{\\left(t \\right)} \\right)} \\left(\\frac{d}{d t} \\theta_{2}{\\left(t \\right)}\\right)^{2} - g m_{1} \\sin{\\left(\\theta_{1}{\\left(t \\right)} \\right)} - \\frac{g m_{2} \\sin{\\left(\\theta_{1}{\\left(t \\right)} - 2 \\theta_{2}{\\left(t \\right)} \\right)}}{2} - \\frac{g m_{2} \\sin{\\left(\\theta_{1}{\\left(t \\right)} \\right)}}{2}}{L_{1} \\left(m_{1} - m_{2} \\cos^{2}{\\left(\\theta_{1}{\\left(t \\right)} - \\theta_{2}{\\left(t \\right)} \\right)} + m_{2}\\right)}$"
             ],
             "text/plain": [
-              "-(L2*m2*sin(theta1(t) - theta2(t))*Derivative(theta2(t), t)**2 + L2*m2*cos(theta1(t) - theta2(t))*Derivative(theta2(t), (t, 2)) + g*m1*sin(theta1(t)) + g*m2*sin(theta1(t)))/(L1*(m1 + m2))"
+              "Eq(Derivative(theta1(t), (t, 2)), (-L1*m2*sin(2*theta1(t) - 2*theta2(t))*Derivative(theta1(t), t)**2/2 - L2*m2*sin(theta1(t) - theta2(t))*Derivative(theta2(t), t)**2 - g*m1*sin(theta1(t)) - g*m2*sin(theta1(t) - 2*theta2(t))/2 - g*m2*sin(theta1(t))/2)/(L1*(m1 - m2*cos(theta1(t) - theta2(t))**2 + m2)))"
             ]
           },
-          "execution_count": 49,
           "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "solve(eq_1,Derivative(theta1, t, 2))[0]"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 47,
-      "metadata": {},
-      "outputs": [
+          "output_type": "display_data"
+        },
         {
-          "ename": "AttributeError",
-          "evalue": "'Derivative' object has no attribute 'items'",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[1;32m/home/andromeda/celestial_mechanics/scripts/Homeworks/MC_Tarea5y6_PenduloDoble.ipynb Celda 40\u001b[0m line \u001b[0;36m5\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/andromeda/celestial_mechanics/scripts/Homeworks/MC_Tarea5y6_PenduloDoble.ipynb#X56sdnNjb2RlLXJlbW90ZQ%3D%3D?line=1'>2</a>\u001b[0m solutions \u001b[39m=\u001b[39m solve((eq_1, eq_2), (Derivative(theta1, t, \u001b[39m2\u001b[39m), Derivative(theta2, t, \u001b[39m2\u001b[39m)))\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/andromeda/celestial_mechanics/scripts/Homeworks/MC_Tarea5y6_PenduloDoble.ipynb#X56sdnNjb2RlLXJlbW90ZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39m# Convertimos las soluciones en ecuaciones para mostrarlas\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell://wsl%2Bubuntu/home/andromeda/celestial_mechanics/scripts/Homeworks/MC_Tarea5y6_PenduloDoble.ipynb#X56sdnNjb2RlLXJlbW90ZQ%3D%3D?line=4'>5</a>\u001b[0m solutions_eqs \u001b[39m=\u001b[39m [Eq(key, value) \u001b[39mfor\u001b[39;00m solution \u001b[39min\u001b[39;00m solutions \u001b[39mfor\u001b[39;00m key, value \u001b[39min\u001b[39;00m solution\u001b[39m.\u001b[39mitems()]\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/andromeda/celestial_mechanics/scripts/Homeworks/MC_Tarea5y6_PenduloDoble.ipynb#X56sdnNjb2RlLXJlbW90ZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39m# Imprimimos las soluciones de manera 'bonita'\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/andromeda/celestial_mechanics/scripts/Homeworks/MC_Tarea5y6_PenduloDoble.ipynb#X56sdnNjb2RlLXJlbW90ZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39mfor\u001b[39;00m eq \u001b[39min\u001b[39;00m solutions_eqs:\n",
-            "\u001b[1;32m/home/andromeda/celestial_mechanics/scripts/Homeworks/MC_Tarea5y6_PenduloDoble.ipynb Celda 40\u001b[0m line \u001b[0;36m5\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/andromeda/celestial_mechanics/scripts/Homeworks/MC_Tarea5y6_PenduloDoble.ipynb#X56sdnNjb2RlLXJlbW90ZQ%3D%3D?line=1'>2</a>\u001b[0m solutions \u001b[39m=\u001b[39m solve((eq_1, eq_2), (Derivative(theta1, t, \u001b[39m2\u001b[39m), Derivative(theta2, t, \u001b[39m2\u001b[39m)))\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/andromeda/celestial_mechanics/scripts/Homeworks/MC_Tarea5y6_PenduloDoble.ipynb#X56sdnNjb2RlLXJlbW90ZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39m# Convertimos las soluciones en ecuaciones para mostrarlas\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell://wsl%2Bubuntu/home/andromeda/celestial_mechanics/scripts/Homeworks/MC_Tarea5y6_PenduloDoble.ipynb#X56sdnNjb2RlLXJlbW90ZQ%3D%3D?line=4'>5</a>\u001b[0m solutions_eqs \u001b[39m=\u001b[39m [Eq(key, value) \u001b[39mfor\u001b[39;00m solution \u001b[39min\u001b[39;00m solutions \u001b[39mfor\u001b[39;00m key, value \u001b[39min\u001b[39;00m solution\u001b[39m.\u001b[39;49mitems()]\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/andromeda/celestial_mechanics/scripts/Homeworks/MC_Tarea5y6_PenduloDoble.ipynb#X56sdnNjb2RlLXJlbW90ZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39m# Imprimimos las soluciones de manera 'bonita'\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/andromeda/celestial_mechanics/scripts/Homeworks/MC_Tarea5y6_PenduloDoble.ipynb#X56sdnNjb2RlLXJlbW90ZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39mfor\u001b[39;00m eq \u001b[39min\u001b[39;00m solutions_eqs:\n",
-            "\u001b[0;31mAttributeError\u001b[0m: 'Derivative' object has no attribute 'items'"
-          ]
+          "data": {
+            "text/latex": [
+              "$\\displaystyle \\frac{d^{2}}{d t^{2}} \\theta_{2}{\\left(t \\right)} = \\frac{L_{1} m_{1} \\sin{\\left(\\theta_{1}{\\left(t \\right)} - \\theta_{2}{\\left(t \\right)} \\right)} \\left(\\frac{d}{d t} \\theta_{1}{\\left(t \\right)}\\right)^{2} + L_{1} m_{2} \\sin{\\left(\\theta_{1}{\\left(t \\right)} - \\theta_{2}{\\left(t \\right)} \\right)} \\left(\\frac{d}{d t} \\theta_{1}{\\left(t \\right)}\\right)^{2} + \\frac{L_{2} m_{2} \\sin{\\left(2 \\theta_{1}{\\left(t \\right)} - 2 \\theta_{2}{\\left(t \\right)} \\right)} \\left(\\frac{d}{d t} \\theta_{2}{\\left(t \\right)}\\right)^{2}}{2} + \\frac{g m_{1} \\sin{\\left(2 \\theta_{1}{\\left(t \\right)} - \\theta_{2}{\\left(t \\right)} \\right)}}{2} - \\frac{g m_{1} \\sin{\\left(\\theta_{2}{\\left(t \\right)} \\right)}}{2} + \\frac{g m_{2} \\sin{\\left(2 \\theta_{1}{\\left(t \\right)} - \\theta_{2}{\\left(t \\right)} \\right)}}{2} - \\frac{g m_{2} \\sin{\\left(\\theta_{2}{\\left(t \\right)} \\right)}}{2}}{L_{2} \\left(m_{1} - m_{2} \\cos^{2}{\\left(\\theta_{1}{\\left(t \\right)} - \\theta_{2}{\\left(t \\right)} \\right)} + m_{2}\\right)}$"
+            ],
+            "text/plain": [
+              "Eq(Derivative(theta2(t), (t, 2)), (L1*m1*sin(theta1(t) - theta2(t))*Derivative(theta1(t), t)**2 + L1*m2*sin(theta1(t) - theta2(t))*Derivative(theta1(t), t)**2 + L2*m2*sin(2*theta1(t) - 2*theta2(t))*Derivative(theta2(t), t)**2/2 + g*m1*sin(2*theta1(t) - theta2(t))/2 - g*m1*sin(theta2(t))/2 + g*m2*sin(2*theta1(t) - theta2(t))/2 - g*m2*sin(theta2(t))/2)/(L2*(m1 - m2*cos(theta1(t) - theta2(t))**2 + m2)))"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
         }
       ],
       "source": [
@@ -1032,7 +1028,46 @@
         "\n",
         "# Imprimimos las soluciones de manera 'bonita'\n",
         "for eq in solutions_eqs:\n",
-        "    display(eq)\n"
+        "    display(simplify(eq))\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### **Parte 2. Lagrangiano**\n",
+        "\n",
+        "## 1. Encuentre la forma de la función potencial de la que derivan las fuerzas generalizadas del sistema."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 57,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/latex": [
+              "$\\displaystyle Ugen = - g \\left(L_{1} m_{1} \\cos{\\left(\\theta_{1}{\\left(t \\right)} \\right)} + L_{1} m_{2} \\cos{\\left(\\theta_{1}{\\left(t \\right)} \\right)} + L_{2} m_{2} \\cos{\\left(\\theta_{2}{\\left(t \\right)} \\right)}\\right)$"
+            ],
+            "text/plain": [
+              "Eq(Ugen, -g*(L1*m1*cos(theta1(t)) + L1*m2*cos(theta1(t)) + L2*m2*cos(theta2(t))))"
+            ]
+          },
+          "execution_count": 57,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "# Definamos esta función potencial\n",
+        "# sistema de q_s:\n",
+        "\n",
+        "\n",
+        "Ugen = symbols(\"Ugen\")\n",
+        "\n",
+        "potential_function = Eq(Ugen,simplify(-(m1*g*L1*cos(theta1)+m2*g*(L1 * sp.cos(theta1) + L2 * sp.cos(theta2)))))\n",
+        "potential_function"
       ]
     }
   ],
